@@ -1,10 +1,3 @@
-<script type="text/javascript">
-    setTimeout ("changePage()", 100);
-    function changePage() {
-        if (self.parent.frames.length != 0)
-            self.parent.location = document.location;
-    }
-</script>
 <form name="frmLogin" method="post" action="" id="frmLogin" flexy:ignore>
     <p><input type="hidden" name="action" value="login" /></p>
     <input type="hidden" name="redir" value="{redir}" />
